// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OffenderPage /> with all props it does not render title if offender details are absent 1`] = `
"<Connect(Page) alwaysRender={false} title={[undefined]} docTitle={[undefined]}>
  <h1>
    Hello
  </h1>
</Connect(Page)>"
`;

exports[`<OffenderPage /> with all props it renders page title 1`] = `
"<Connect(Page) alwaysRender={false} title=\\"A Page for Bob Smith\\" docTitle={[undefined]}>
  <h1>
    Hello
  </h1>
</Connect(Page)>"
`;
